# mini-minipic

./: .gitlab-ci.yml  CMakeLists.txt  README.md
doc/: code_structure.md  python_tools.md  setups.md
libminipic/: __main__.py  ci.py  diag.py  exceptions.py  run.py  validate.py
libminipic/validation/: antenna.py  b_cst.py  beam.py  default.py  e_cst.py  thermal.py
slurm/: launch_ruche_a100.slurm  launch_ruche_cpu.slurm
src/: .main.cpp.swp
src/common/: Backend.hpp  Diagnostics.hpp  Diagnotics.hpp  Field.hpp  Headers.hpp  Patch.cpp  Patch.hpp  Timers.hpp  Vector.hpp
src/exercices/: Operators.hpp  SubDomain.hpp
src/exercise/: .Managers.cpp.swp  .Operators.cpp.swp  Managers.cpp  Operators.cpp
src/kokkos/: Operators.cpp  Operators.hpp  SubDomain.hpp
src/openmp/: Operators.hpp
src/setups/: beam.hpp
tests/: run.py
